--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-in-memory-web-api": "^0.14.0",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
